assets/scss/style.scss
@import 'assets/scss/partials/helpers';
@import 'assets/scss/partials/animation-transition';
@import 'assets/scss/partials/animation-pulse';
@import 'assets/scss/partials/animation-cycle';

$primary-font: 'Work Sans', sans-serif;
$primary-color: #fffff5;
$secondary-color: #b3b3b3;
$highlight-color: #feebad;
$base-color: #fece7e;
$dim-color: #262523;
$background-color: #181818;
$shadow-color: #0D0D0D;

html {
    background: url('/static/img/tile.png');
    background-attachment: fixed;
    background-color: $background-color;
    background-repeat: repeat;
    color: $primary-color;
    font-family: $primary-font;
    height: 100%;
    text-align: center;
    @include animation-cycle(background-position-x, 0px, 75px, 3);
}

body {
    margin: 0;
    height: 0px;
    overflow-y: auto;
    text-align: center;
}

p {
    margin: 1em;
}

a {
    margin: 1em;
    color: $base-color;
    text-decoration: none;

    @include transition("color, text-shadow", 0.5s, ease-in-out);

    &:visited {
        color: $base-color;
    }

    &:hover {
        color: $highlight-color;
        text-shadow: 0px 0px 8px rgba($base-color, .25);
    }
}

#canvas {
    z-index: -2;
    height: 100%;
    left: 0;
    overflow: hidden;
    position: fixed;
    top: 0;
    width: 100%;
    @include animation-transition(opacity, 0, 1, 1, 1);
}

.background {
    z-index: -2;
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100%;
    pointer-events: all;
}

.vignette {
    z-index: -2;
    background: radial-gradient(transparent, $shadow-color);
    background-attachment: fixed;
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100%;
    pointer-events: none;
}

.logo {
    border-radius: 100px;
    background: url('/static/img/logo.png');
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    width: 1024px;
    height: 1024px;
    position: fixed;
    top: 0;
    bottom: 16%;
    left: 0;
    right: 0;
    min-width: 50%;
    min-height: 50%;
    max-width: 70%;
    max-height: 70%;
    margin: auto;
    @include animation-pulse(transform, scale(1.0), scale(0.9), 10);
}

.logo-shadow {
    @extend .logo;
    filter: blur(16px) brightness(.05);
}

header {
    z-index: -2;
    position: fixed;
    width: 100%;
    height: 100%;
    color: $base-color;
    text-shadow: 0px 0px 32px $shadow-color;
    text-transform: uppercase;
    white-space: nowrap;

    h1 {
        width: 640px;
        position: fixed;
        bottom: 13%;
        left: 0;
        right: 0;
        font-weight: 100;
        font-size: 4em;
        letter-spacing: 10px;
        text-align: center;
        margin: auto;

        @include transition("letter-spacing, color, text-shadow", 0.5s, ease-in-out);

        &:hover {
            letter-spacing: 16px;
            color: $highlight-color;
            text-shadow: 0px 0px 64px rgba($base-color, .75);
        }

        a {
            margin: 0;
        }
    }

    h2 {
        position: fixed;
        bottom: 8%;
        left: 0;
        right: 0;
        font-weight: 400;
        font-size: 1em;
        letter-spacing: 3px;
    }

    .top {
        position: fixed;
        background: linear-gradient(180deg, $shadow-color, $shadow-color, $background-color);
        width: 200%;
        height: 148px;
        left: -50%;
        top: -96px;
    }

    .bottom {
        position: fixed;
        background: linear-gradient(0deg, $shadow-color, $shadow-color, $background-color);
        width: 200%;
        height: 154px;
        left: -50%;
        bottom: -128px;
    }
}

progress {
    z-index: 2;
    position: fixed;
    width: 50%;
    height: 2px;
    top: 48px;

    &::-moz-progress-bar {
        background: $background-color;
    }

    &::-webkit-progress-bar {
        background: $background-color;
    }

    &[value] {
       -webkit-appearance: none;
       -moz-appearance: none;
       appearance: none;

       color: $base-color;
    }

    &[value]::-moz-progress-value {
        background: $base-color;
    }

    &[value]::-webkit-progress-value {
        background: $base-color;
    }

    &.progress-forward {
        left: 50%;
    }

    &.progress-reverse {
        display: block;
        float: right;
    }

    &.progress-reverse::-moz-progress-bar {
        background: $base-color;
    }

    &.progress-reverse::-webkit-progress-bar {
        background: $base-color;
    }

    &.progress-reverse[value]::-moz-progress-value {
        background: $background-color;
    }

    &.progress-reverse[value]::-webkit-progress-value {
        background: $background-color;
    }
}

nav {
    position: fixed;
    width: 100%;
    height: 48px;
    color: $highlight-color;
    border-bottom: 1px solid $dim-color;
    background: linear-gradient(90deg, $shadow-color, $background-color, $shadow-color);
    text-align: center;
    text-transform: uppercase;
    text-shadow: 0px 0px 16px $shadow-color;
    line-height: 48px;
    z-index: 1;
}

.controls {
    position: fixed;
    width: 100%;
    height: 64px;
    top: 48px;
    display: none;
    pointer-events: none;

    .control {
        margin: 8px 8px 8px auto;
        width: 40px;
        height: 40px;
        border-radius: 40px;
        color: $secondary-color;
        background: linear-gradient(180deg, $shadow-color, $background-color);
        line-height: 40px;
        z-index: 1;
        cursor: pointer;
        pointer-events: all;

        @include transition("color box-shadow", 0.25s, ease-in-out);

        &:hover {
            color: $base-color;
            box-shadow: 0px 0px 8px 0px $highlight-color;
        }
    }

    .control-fx {
        @extend .control;
    }
}

.profile-image {
    border-radius: 128px;
    background: url('/static/img/profile.png');
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    text-align: center;
    margin: 24px auto;
    width: 192px;
    height: 192px;
}

.content {
    max-width: 920px;
    min-height: 100%;
    margin-top: 48px;
    z-index: 0;
    display: none;

    p {
        line-height: 1.4em;
    }

    .opening {
        text-align: justify;
        -moz-text-align-last: center;
        text-align-last: center;
    }
}

.content-noscript {
    @extend .content;

    display: inline-block;
}

.content-cover {
    max-width: 920px;
    min-height: 100%;
    background: linear-gradient(0deg, $background-color, $shadow-color);
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    opacity: .975;
    z-index: -1;
    display: none;
}

.content-cover-noscript {
    @extend .content-cover;
    display: inline-block;
}

footer {
    position: fixed;
    width: 100%;
    bottom: 0;
    z-index: 1;

    .footer-handle {
        height: 24px;
        border-top: 1px solid $background-color;
        background: linear-gradient(90deg, black, $shadow-color, black);
        color: $dim-color;
        text-align: center;
        text-transform: uppercase;
        text-shadow: 0px 0px 16px $shadow-color;
        line-height: 0px;
        font-size: 0.8em;

        @include transition(all, 0.5s, ease-in-out);

        &:hover {
            border-top: 1px solid $dim-color;
            color: $base-color;
            height: 32px;
            line-height: 12px;
            text-shadow: 0px 0px 64px $base-color;
            cursor: pointer;
        }

        .footer-anchor {
            display: none;
            @include transition(transform, 0.5s, ease-in-out);
        }
    }

    .footer-content {
        height: 114px;
        border-top: 1px solid $background-color;
        background-color: $shadow-color;
        display: none;
        font-size: 0.9em;
        text-transform: uppercase;

        p {
            margin: 0 0 0 0;
            color: $secondary-color;
        }

        a {
            margin: 1em 0 0 0;
            display: inline-block;
        }
    }

    .footer-icons {
        margin-bottom: -1em;
        line-height: 30px;
        vertical-align: middle;

        a {
            background-size: contain;
            background-repeat: no-repeat;
            background-position: center;
            width: 20px;
            height: 20px;
            margin: 16px 8px;

            @include transition(all, 0.25s, ease-in-out);
        }

        a:hover {
            width: 28px;
            height: 28px;
            margin: 0px 4px 12px 4px;
        }
    }

    .footer-twitter {
        background: url('/static/img/icons/twitter.png');
    }

    .footer-facebook {
        background: url('/static/img/icons/facebook.png');
    }

    .footer-youtube {
        background: url('/static/img/icons/youtube.png');
    }

    .footer-github {
        background: url('/static/img/icons/github.png');
    }

    .footer-steam {
        background: url('/static/img/icons/steam.png');
    }
}

::-webkit-scrollbar {
    width: 10px;
    border-left: 1px $dim-color;
    background: #0c0c0c;
}

::-webkit-scrollbar-thumb {
    background: $background-color;
    box-shadow: 0px 0px 16px 0px $shadow-color;
}

::-webkit-scrollbar-thumb:hover {
    background: $base-color;
}

::-webkit-scrollbar-corner {
    background: #000;
}

